syntax = "proto3";

package dateTime;

option go_package = "github.com/area/grpc-go/service";


service DateTimeService {
  rpc LaunchCronJob(TriggerTimeRequest) returns (TriggerTimeResponse) {}
}

message TriggerTimeRequest {
  int32 action_id = 1;

  int32 minutes = 2;
  int32 hours = 3;

  int64 day_month = 4;
  int64 month = 5;

  int64 day_week = 6;
}

message TriggerTimeResponse {
}
